fixes sidenav spacing

--- a/main.css
+++ b/main.css
@@ -7,11 +7,7 @@ body {
 }
 /* ********************* breakpoint ********************** */
 
-@include media-breakpoint-down(md) {
-  .custom-class {
-    display: block;
-  }
-}
+
 
 /* ********************* nav styles ********************** */
 .main {
@@ -51,6 +47,13 @@ body {
   .vertical-menu span:hover {
     color: rgb(108, 39, 148);
   }
+
+  .centernav {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
   
   .bottomnav {
       margin-bottom: 3vw;
@@ -168,7 +171,4 @@ h3 {
     display: flex;
     flex-direction: column;
 }
-
-
-
   
